--- a/app/src/main/res/layout/fragment_navigation_drawer2.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer2.xml
@@ -5,5 +5,7 @@
     android:choiceMode="singleChoice"
     android:divider="@android:color/transparent"
     android:dividerHeight="0dp"
-    android:background="#cccc"
-    tools:context="com.trade.tradepost.NavigationDrawerFragment" />
+    android:background="@color/white"
+    tools:context="com.trade.tradepost.NavigationDrawerFragment"
+
+    />
