--- a/app/src/main/res/layout/s.xml
+++ b/app/src/main/res/layout/s.xml
@@ -3,31 +3,22 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    >
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/profilepic" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:id="@+id/item_pic"
+        />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Email"
-            android:id="@+id/emailtext" />
+            android:id="@+id/item_name"
+            android:layout_gravity="center_vertical"
+            />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Username"
-            android:id="@+id/username" />"
-
-    </LinearLayout>
 
 
 </LinearLayout>
