--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,11 +4,8 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.trade.tradepost.LoginActivity">
+    tools:context="com.trade.tradepost.LoginActivity"
+    android:layout_marginTop="20dp">
 
 
     <!-- Login progress -->
@@ -30,7 +27,8 @@
     <ScrollView
         android:id="@+id/login_form"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -51,6 +49,8 @@
                     android:hint="@string/prompt_email"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginRight="25dp"
                     android:singleLine="true" />
 
                 <EditText
@@ -63,7 +63,11 @@
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
                     android:maxLines="1"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginRight="25dp"
+
+                    />
 
                 <Button
                     android:id="@+id/email_sign_in_button"
@@ -71,8 +75,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginRight="25dp"
                     android:text="@string/action_sign_in"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+
+                    />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
@@ -80,9 +88,9 @@
     <include
         layout="@layout/create"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        />"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        />
 
 
 </LinearLayout>
