--- a/app/src/main/res/layout/activity_marketplace.xml
+++ b/app/src/main/res/layout/activity_marketplace.xml
@@ -1,20 +1,45 @@
 <!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sinapp.sharathsind.tradepost.MainActivity">
+    tools:context="com.sinapp.sharathsind.tradepost.MarketPlaceActivity"
+    >
 
     <!--
          As the main content view, the view below consumes the entire
          space available using match_parent in both dimensions.
     -->
 
+
+
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
+
+
+            <com.etsy.android.grid.StaggeredGridView
+                android:id="@+id/grid_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:item_margin="8dp"
+                app:column_count="2" />
+
+
+
+        </LinearLayout>
+    </FrameLayout>
+
 
     <!--
          android:layout_gravity="start" tells DrawerLayout to treat
@@ -30,10 +55,11 @@
 
     <fragment
         android:id="@+id/navigation_drawer"
-        android:name="com.sinapp.sharathsind.tradepost.NavigationDrawerFragment"
         android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        tools:layout="@layout/fragment_navigation_drawer2" />
+        tools:layout="@layout/fragment_navigation_drawer"
+        class ="com.sinapp.sharathsind.tradepost.NavigationDrawerFragment"
+        />
 
 </android.support.v4.widget.DrawerLayout>
