--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -7,51 +7,64 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.trade.tradepost.Welcome">
+    tools:context="com.trade.tradepost.Welcome"
+    android:background="@color/background">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:textStyle="bold"
         android:id="@+id/title"
         android:layout_centerHorizontal="true"
-        android:textColor="@android:color/darker_gray"
-        android:textSize="60sp"
-        android:text="@string/app_name" />
+        android:layout_centerVertical="true"
+        android:textColor="@color/white"
+        android:textSize="80sp"
+        android:text="@string/app_name"
+        android:layout_above="@+id/tag"
+        />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/title"
-        android:layout_centerHorizontal="true"
         android:textSize="20sp"
-        android:text="rag"
-        android:id="@+id/tag" />
+        android:text="Tagline goes here..."
+        android:id="@+id/tag"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/white"
+
+        />
 
     <TextView
+        android:layout_above="@id/or"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tag"
         android:id="@+id/swipe"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
+        android:textSize="20sp"
+        android:textColor="@color/white"
         android:text="Swipe to Get Started" />
 
     <TextView
+        android:id="@+id/tour"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/swipe"
         android:layout_centerHorizontal="true"
-        android:id="@+id/or"
-        android:layout_marginTop="40dp"
-        android:text="or" />
+        android:text="@string/tour_text"
+        android:layout_alignParentBottom="true"
+        android:paddingBottom="20dp"
+        android:textColor="@color/white"
+
+        />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/or"
-        android:layout_marginTop="40dp"
-        android:text="take a tour" />
+        android:id="@+id/or"
+        android:layout_above="@id/tour"
+        android:text="or"
+        android:textColor="@color/white"
+        />
+
 </RelativeLayout>
