--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -1,9 +1,18 @@
+
+
+
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#cccc"
+    android:background="@color/white"
     android:choiceMode="singleChoice"
     android:divider="@android:color/black"
-    android:dividerHeight="2dp"
+    android:dividerHeight="1dp"
+    android:layout_weight="1"
+    android:id="@+id/listview"
     tools:context="com.swap.tradepost.NavigationDrawerFragment" />
+
+
+
+
