--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,4 +3,9 @@
     <color name="black">#000</color>
     <color name="blue">#00f</color>
     <color name="red">#f00</color>
+    <color name="background">#4ECAAE</color>
+    <color name="white">#FFFFFF</color>
+    <color name="lightgrey">#80D3D3D3</color>
+
+
 </resources>
