--- a/app/src/main/res/drawable-hdpi/b.xml
+++ b/app/src/main/res/drawable-hdpi/b.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" android:drawable="@color/red" />
+    <item android:state_pressed="true" android:drawable="@color/color_primary_dark" />
     <!-- pressed -->
-    <item android:state_focused="true" android:drawable="@color/blue" />
+    <item android:state_focused="true" android:drawable="@color/color_primary" />
     <!-- focused -->
 
     <item>
@@ -11,7 +11,7 @@
 
             <gradient android:startColor="#3300FF" android:endColor="#3300FF" android:angle="270" />
 
-            <stroke android:width="8px" android:color="#000000" />
+            <stroke android:width="4px" android:color="#80FFFFFF" />
 
         </shape>
     </item>
