--- a/app/src/main/res/layout/activity_marketplace.xml
+++ b/app/src/main/res/layout/activity_marketplace.xml
@@ -2,6 +2,8 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
+
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,7 +21,21 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         >
+
+        <com.melnykov.fab.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_fab_primary"
+            fab:fab_colorNormal="@color/color_primary"
+            fab:fab_colorPressed="@color/color_primary_dark"
+
+            />
+
 
         <LinearLayout
             android:layout_width="match_parent"
