--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -18,7 +18,8 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:textColor="@color/white"
-        android:textSize="80sp"
+        android:textSize="60sp"
+        android:maxLines="1"
         android:text="@string/app_name"
         android:layout_above="@+id/tag"
         />
