--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -74,6 +74,16 @@ tools:context="com.sinapp.sharathsind.tradepost.ChatActivity"
                 android:text="@string/send"
                 android:textSize="18sp" >
             </Button>
+            <Button
+                android:id="@+id/cam_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical|right"
+                android:paddingRight="90dp"
+                android:layout_alignParentRight="true"
+                android:text="@string/send"
+                android:textSize="18sp" >
+            </Button>
         </RelativeLayout>
     </RelativeLayout>
 
