--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -1,114 +1,170 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:id="@+id/drawer_layout"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context="com.sinapp.sharathsind.tradepost.ChatActivity"
-    >
-
-<!--
-     As the main content view, the view below consumes the entire
-     space available using match_parent in both dimensions.
--->
-
-
-
-<FrameLayout
-    android:id="@+id/container"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context="com.sinapp.sharathsind.tradepost.ChatActivity"
     >
 
-    <RelativeLayout
-        android:orientation="vertical"
-        android:background="#4Dffffff"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ListView
-            android:id="@+id/listview_chat"
-            android:transcriptMode="alwaysScroll"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
-            android:layout_above="@+id/send_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
+    <!--
+         As the main content view, the view below consumes the entire
+         space available using match_parent in both dimensions.
+    -->
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="#4D000000"
-            android:layout_above="@+id/send_bar"/>
+
+
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
 
         <RelativeLayout
-            android:id="@+id/send_bar"
-            android:layout_alignParentBottom="true"
+            android:orientation="vertical"
+            android:background="#4Dffffff"
             android:layout_width="match_parent"
-            android:background="@color/lightgrey"
-            android:paddingTop="5dp"
-            android:paddingBottom="10dp"
-            android:paddingLeft="0dp"
-            android:paddingRight="0dp"
-            android:layout_height="wrap_content" >
+            android:layout_height="match_parent">
+            <ListView
+                android:id="@+id/listview_chat"
+                android:transcriptMode="alwaysScroll"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentRight="true"
+                android:layout_above="@+id/send_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
 
-
-            <EditText
-                android:id="@+id/send_msg"
-                android:layout_toLeftOf="@+id/send_btn"
-                android:layout_alignBottom="@+id/send_btn"
+            <View
                 android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="#4D000000"
+                android:layout_above="@+id/send_bar"/>
+
+            <RelativeLayout
+                android:id="@+id/send_bar"
+                android:layout_width="match_parent"
+                android:background="@color/lightgrey"
+                android:paddingTop="4dp"
+                android:paddingBottom="8dp"
                 android:layout_height="wrap_content"
-                android:gravity="top"
-                android:hint="@string/message_hint"
-                android:inputType="textShortMessage"
-                android:imeOptions="actionSend"
-                />
-            <Button
-                android:id="@+id/send_btn"
-                android:layout_width="wrap_content"
+                android:layout_above="@+id/attach_bar"
+                android:layout_alignParentBottom="true"
+                >
+
+                <ImageView
+                    android:id="@+id/attach_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:src="@drawable/ic_fab_primary"
+                    android:textSize="18sp"
+                    android:clickable="true"
+                    />
+
+                <EditText
+                    android:id="@+id/send_msg"
+                    android:layout_toRightOf="@+id/attach_btn"
+                    android:layout_toLeftOf="@+id/send_btn"
+                    android:layout_alignBottom="@+id/attach_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="top"
+                    android:hint="@string/message_hint"
+                    android:inputType="textShortMessage"
+                    android:imeOptions="actionSend"
+                    />
+
+                <Button
+                    android:id="@+id/send_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/send"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignBottom="@id/send_msg"
+                     />
+            </RelativeLayout>
+
+
+            <RelativeLayout
+                android:id="@+id/attach_bar"
+                android:layout_alignParentBottom="false"
+                android:layout_width="match_parent"
+                android:background="@color/lightgrey"
+                android:paddingBottom="8dp"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical|right"
-                android:paddingRight="10dp"
-                android:layout_alignParentRight="true"
-                android:text="@string/send"
-                android:textSize="18sp" >
-            </Button>
-            <Button
-                android:id="@+id/cam_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical|right"
-                android:paddingRight="90dp"
-                android:layout_alignParentRight="true"
-                android:text="@string/send"
-                android:textSize="18sp" >
-            </Button>
+                >
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:background="#4D000000"
+                    />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/attachment"
+                    android:background="@color/lightgrey"
+                    android:orientation="horizontal">
+
+
+                    <Button
+                        android:id="@+id/attachment_cam"
+                        style="?android:textAppearanceSmall"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Folder"
+                        android:textStyle="bold"
+                        android:layout_weight="1"
+
+                        />
+
+                    <Button
+                        android:id="@+id/attachment_folder"
+                        style="?android:textAppearanceSmall"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Camera"
+                        android:textStyle="bold"
+                        android:layout_weight="1"
+
+
+                        />
+
+                </LinearLayout>
+
+
+
+
+
+
+            </RelativeLayout>
+
+
         </RelativeLayout>
-    </RelativeLayout>
 
-</FrameLayout>
+    </FrameLayout>
 
 
-<!--
-     android:layout_gravity="start" tells DrawerLayout to treat
-     this as a sliding drawer on the left side for left-to-right
-     languages and on the right side for right-to-left languages.
-     If you're not building against API 17 or higher, use
-     android:layout_gravity="left" instead.
--->
-<!--
-     The drawer is given a fixed width in dp and extends the full height of
-     the container.
--->
+    <!--
+         android:layout_gravity="start" tells DrawerLayout to treat
+         this as a sliding drawer on the left side for left-to-right
+         languages and on the right side for right-to-left languages.
+         If you're not building against API 17 or higher, use
+         android:layout_gravity="left" instead.
+    -->
+    <!--
+         The drawer is given a fixed width in dp and extends the full height of
+         the container.
+    -->
 
-<fragment
-    android:id="@+id/navigation_drawer"
-    android:layout_width="@dimen/navigation_drawer_width"
-    android:layout_height="match_parent"
-    android:layout_gravity="start"
-    tools:layout="@layout/fragment_navigation_drawer"
-    class ="com.sinapp.sharathsind.tradepost.NavigationDrawerFragment"
-    />
+    <fragment
+        android:id="@+id/navigation_drawer"
+        android:layout_width="@dimen/navigation_drawer_width"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        tools:layout="@layout/fragment_navigation_drawer"
+        class ="com.sinapp.sharathsind.tradepost.NavigationDrawerFragment"
+        />
 
 </android.support.v4.widget.DrawerLayout>
