--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -46,7 +46,7 @@
                 android:layout_width="match_parent"
                 android:background="@color/lightgrey"
                 android:paddingTop="4dp"
-                android:paddingBottom="8dp"
+                android:paddingBottom="4dp"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/attach_bar"
                 android:layout_alignParentBottom="true"
@@ -89,8 +89,8 @@
             <RelativeLayout
                 android:id="@+id/attach_bar"
                 android:layout_width="match_parent"
-                android:background="@color/lightgrey"
-                android:paddingBottom="8dp"
+                android:background="@color/white"
+                android:paddingBottom="4dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:visibility="invisible"
@@ -105,7 +105,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/attachment"
-                    android:background="@color/lightgrey"
+                    android:paddingTop="8dp"
                     android:orientation="horizontal">
 
 
