--- a/app/src/main/res/layout/activity_single_listing_view.xml
+++ b/app/src/main/res/layout/activity_single_listing_view.xml
@@ -21,14 +21,14 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingTop="8dp"
 
             >
 
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/single_listing_img_layout">
+                android:id="@+id/single_listing_img_layout"
+                >
 
 
                 <ImageView
@@ -36,7 +36,6 @@
                     android:layout_height="250dp"
                     android:id="@+id/single_listing_img"
                     android:src="@drawable/ic_fab_primary"
-                    android:paddingBottom="8dp"
                     />
 
 
@@ -50,6 +49,7 @@
                 android:id="@+id/single_listing_other_layout"
                 android:layout_below="@+id/single_listing_img_layout"
                 android:background="@color/lightgrey"
+                android:paddingTop="8dp"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
                 >
