Updates: -using RecycleView & StaggeredGridView in MarketPlaceActivity

--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -7,7 +7,8 @@
     <color name="color_primary">#4ECAAE</color>
     <color name="color_primary_dark">#2CA88C</color>
     <color name="white">#FFFFFF</color>
-    <color name="lightgrey">#80D3D3D3</color>
+    <color name="darkgrey">#80D3D3D3</color>
+    <color name="lightgrey">#80F5F5F5</color>
     <color name="blue_fab_primary">#33b5e5</color>
     <color name="blue_fab_primary_dark">#1193C3</color>
 
