--- a/app/src/main/res/layout/activity_marketplace.xml
+++ b/app/src/main/res/layout/activity_marketplace.xml
@@ -3,11 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
-
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sinapp.sharathsind.tradepost.MarketPlaceActivity1"
+    tools:context="com.sinapp.sharathsind.tradepost.MarketPlaceActivity"
     >
 
     <!--
@@ -42,12 +41,21 @@
 
 
 
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recylcer_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="vertical" />
+
+
+            <!--
             <com.etsy.android.grid.StaggeredGridView
                 android:id="@+id/grid_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:item_margin="8dp"
                 app:column_count="2" />
+              -->
 
 
 
@@ -65,10 +73,12 @@
             android:layout_gravity="bottom|right"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
+            android:src="@drawable/fab_plus_icon"
             fab:fab_colorNormal="@color/color_primary"
             fab:fab_colorPressed="@color/color_primary_dark"
 
             />
+
 
     </FrameLayout>
 
