--- a/app/src/main/res/layout/list_item_staggeredgrid.xml
+++ b/app/src/main/res/layout/list_item_staggeredgrid.xml
@@ -1,59 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/background_card">
+    android:background="@color/lightgrey"
+    >
 
-
+    <!--
     <com.etsy.android.grid.util.DynamicHeightImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         />
+       -->
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@color/lightgrey"
+        card_view:cardCornerRadius="4dp"
+        card_view:cardUseCompatPadding="true"
 
-    >
+        >
 
-        <ImageView
-            android:id="@+id/pro_img"
+
+
+
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_launcher"
+            android:layout_height="wrap_content">
+
+
+
+
+            <ImageView
+
+                android:id="@+id/image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_alignParentTop="true"
             />
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="4dp"
-            android:paddingTop="4dp"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            android:textSize="14sp"
-            android:layout_gravity="bottom"/>
 
-        <TextView
-            android:layout_width="wrap_content"
+
+
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/details_bar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="top|right"
-            android:textSize="12sp"
-            android:text="4 hours ago"
-            android:layout_marginRight="1dp"
+            android:orientation="horizontal"
+            android:background="@color/darkgrey"
+            android:layout_below="@+id/image"
+
+        >
+
+
+                <ImageView
+                android:id="@+id/pro_img"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_launcher"
+                />
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:textSize="14sp"
+                android:layout_gravity="bottom"
+                android:maxLines="1"
+
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|right"
+                android:textSize="12sp"
+                android:text="4 hours ago"
+                android:layout_marginRight="1dp"
+                android:maxLines="1"
             />
 
     </LinearLayout>
 
     <View
+        android:id="@+id/divider_view"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="#ccc" />
+        android:background="#ccc"
+        android:layout_below="@+id/details_bar"
+
+
+        />
 
     <TextView
         android:id="@+id/description"
@@ -65,11 +114,16 @@
         android:paddingRight="8dp"
         android:textSize="14sp"
         android:textStyle="bold"
-        android:background="@color/lightgrey" />
+        android:background="@color/darkgrey"
+        android:layout_below="@+id/divider_view"/>
 
 
+        </RelativeLayout>
 
+
+</android.support.v7.widget.CardView>
 
 
 
 </LinearLayout>
+
