--- a/app/src/main/res/layout/marketplace_header.xml
+++ b/app/src/main/res/layout/marketplace_header.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
+    android:background="@color/white"
     >
 
     <ImageView
@@ -25,7 +26,5 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         />
-
-
 
 </RelativeLayout>
