--- a/app/src/main/res/layout/activity_listing_process.xml
+++ b/app/src/main/res/layout/activity_listing_process.xml
@@ -73,7 +73,8 @@
                     android:layout_height="wrap_content"
                     android:hint="Item name here"
                     android:layout_below="@+id/section1_text"
-                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:imeOptions="actionDone"
 
                     />
 
@@ -111,40 +112,90 @@
                     android:layout_alignBottom="@id/section2_img"
                     />
 
+                <View
+                    android:id="@+id/section2_scroll_top_div"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:background="@color/black"
+                    android:layout_below="@id/section2_img"
+                    />
 
-                <ImageView
+                <HorizontalScrollView
+                    android:id="@+id/section2_scroll"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:layout_below="@+id/section2_scroll_top_div"
+
+                    >
+
+                    <org.apmem.tools.layouts.FlowLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+
+                        <ImageView
+                            android:layout_width="100dp"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/ic_section2_camera"
+
+                            />
+                        <ImageView
+                            android:layout_width="100dp"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/ic_section2_camera"
+                            />
+                        <ImageView
+                            android:layout_width="100dp"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/ic_section2_camera"
+                            />
+
+                    </org.apmem.tools.layouts.FlowLayout>
+                </HorizontalScrollView>
+
+                <View
+                    android:id="@+id/section2_scroll_bottom_div"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:background="@color/black"
+                    android:layout_below="@+id/section2_scroll"
+                    android:layout_marginBottom="8dp"
+                    />
+
+                <ImageButton
                     android:id="@+id/section2_img_camera"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/section2_text"
+                    android:layout_below="@+id/section2_scroll_bottom_div"
                     android:layout_toLeftOf="@+id/section2_or"
-                    android:src="@drawable/ic_section2_camera"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:paddingBottom="16dp"
+                    android:clickable="true"
+
                     />
 
                 <TextView
                     android:id="@+id/section2_or"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_below="@+id/section2_scroll_bottom_div"
                     android:text="OR"
-                    android:paddingTop="16dp"
-                    android:paddingBottom="32dp"
                     android:layout_alignBottom="@+id/section2_img_folder"
                     android:layout_centerHorizontal="true"
+                    android:paddingTop="24dp"
+
                     />
 
-                <ImageView
+                <ImageButton
                     android:id="@+id/section2_img_folder"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@+id/section2_or"
-                    android:layout_below="@+id/section2_text"
-                    android:src="@drawable/ic_section2_camera"
+                    android:layout_below="@+id/section2_scroll_bottom_div"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
-                    android:paddingBottom="16dp"
+                    android:clickable="true"
+
 
                     />
 
@@ -260,9 +311,12 @@
                     android:id="@+id/section4_edit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingBottom="100dp"
                     android:layout_below="@+id/section4_text"
                     android:background="#FFFFFF"
+                    android:lines="5"
+                    android:maxLines="5"
+                    android:gravity="left|top"
+
 
                     />
 
@@ -313,6 +367,7 @@
                     android:layout_below="@+id/section5_text"
                     android:layout_toLeftOf="@+id/section5_plus"
                     android:singleLine="true"
+                    android:imeOptions="actionDone"
                     />
 
                 <ImageView
