--- a/app/src/main/res/layout/activity_single_listing_view.xml
+++ b/app/src/main/res/layout/activity_single_listing_view.xml
@@ -1,26 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
+
+    <include
+        android:id="@+id/tool_bar"
+        layout="@layout/toolbar_default">
+    </include>
 
     <include
         layout="@layout/single_listing_header"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:id="@+id/single_listing_header"
+        android:layout_below="@+id/tool_bar"
         />
 
 
     <ScrollView
-        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/single_listing_scroll"
         android:layout_gravity="center_horizontal"
+        android:layout_below="@+id/single_listing_header"
         >
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
 
             >
 
