--- a/app/src/main/res/layout/list_item_staggeredgrid.xml
+++ b/app/src/main/res/layout/list_item_staggeredgrid.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/lightgrey"
+    android:background="@color/darkgrey"
     >
 
     <!--
@@ -32,31 +32,43 @@
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:id="@+id/image_parentlayout">
 
 
 
 
             <ImageView
 
-                android:id="@+id/image"
-                android:layout_width="match_parent"
+                android:id="@+id/item_image"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_alignParentTop="true"
+                android:src="@drawable/sample_img"
+                android:layout_centerHorizontal="true"
+                android:adjustViewBounds="true"
             />
 
-
-
-
+            <ImageView
+                android:id="@+id/image_like_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_like_selected"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_alignTop="@+id/item_image"
+                android:layout_alignRight="@+id/item_image"
+                android:clickable="true"
+                />
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/details_bar"
+            android:id="@+id/pro_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:background="@color/darkgrey"
-            android:layout_below="@+id/image"
+            android:layout_below="@+id/item_image"
 
         >
 
@@ -69,7 +81,7 @@
                 />
 
             <TextView
-                android:id="@+id/title"
+                android:id="@+id/pro_username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="4dp"
@@ -83,6 +95,7 @@
                 />
 
             <TextView
+                android:id="@+id/pro_post_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|right"
@@ -99,13 +112,13 @@
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="#ccc"
-        android:layout_below="@+id/details_bar"
+        android:layout_below="@+id/pro_bar"
 
 
         />
 
     <TextView
-        android:id="@+id/description"
+        android:id="@+id/item_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="8dp"
@@ -118,7 +131,15 @@
         android:layout_below="@+id/divider_view"/>
 
 
+
+
+
         </RelativeLayout>
+
+
+
+
+
 
 
 </android.support.v7.widget.CardView>
