--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -12,6 +12,15 @@
     <color name="blue_fab_primary">#33b5e5</color>
     <color name="blue_fab_primary_dark">#1193C3</color>
     <color name="cokered_trans">#80f40000</color>
+    <color name="grey">#5e5e5e</color>
+    <color name="myAccentColor">#FF4081</color>
+    <color name="myDrawerBackground">#FFF</color>
+    <color name="myWindowBackground">#FFF</color>
+    <color name="myTextPrimaryColor">#212121</color>
+    <color name="myNavigationColor">#000</color>
+
+    <drawable name="pressed_gray">#0c000000</drawable>
+    <drawable name="selected_gray">#2c000000</drawable>
 
 
 
