--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -4,8 +4,9 @@
     <color name="blue">#00f</color>
     <color name="red">#f00000</color>
     <color name="background">#4ECAAE</color>
-    <color name="color_primary">#4ECAAE</color>
-    <color name="color_primary_dark">#2CA88C</color>
+    <color name="ColorPrimary">#4ECAAE</color>
+    <color name="ColorPrimaryDark">#2CA88C</color>
+    <color name="tabsScrollColor">#1193C3</color>
     <color name="white">#FFFFFF</color>
     <color name="darkgrey">#80D3D3D3</color>
     <color name="lightgrey">#80F5F5F5</color>
@@ -18,6 +19,7 @@
     <color name="myWindowBackground">#FFF</color>
     <color name="myTextPrimaryColor">#212121</color>
     <color name="myNavigationColor">#000</color>
+    <color name="lightgrey_chat">#5e5e5e</color>
 
     <drawable name="pressed_gray">#0c000000</drawable>
     <drawable name="selected_gray">#2c000000</drawable>
