--- a/app/src/main/res/drawable-hdpi/b.xml
+++ b/app/src/main/res/drawable-hdpi/b.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" android:drawable="@color/color_primary_dark" />
+    <item android:state_pressed="true" android:drawable="@color/ColorPrimaryDark" />
     <!-- pressed -->
-    <item android:state_focused="true" android:drawable="@color/color_primary" />
+    <item android:state_focused="true" android:drawable="@color/ColorPrimary" />
     <!-- focused -->
 
     <item>
