--- a/app/src/main/res/layout/activity_single_listing_view.xml
+++ b/app/src/main/res/layout/activity_single_listing_view.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <include
         android:id="@+id/tool_bar"
@@ -60,6 +60,19 @@
 
 
             </RelativeLayout>
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/offer_fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/fab_plus_icon"
+                android:layout_alignBottom="@+id/single_listing_img_layout"
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="-28dp"
+                android:layout_marginRight="16dp"
+                app:backgroundTint="@color/ColorPrimary"
+                app:fabSize="normal"
+                />
 
 
 
