--- a/app/src/main/res/layout/fragment_marketplace.xml
+++ b/app/src/main/res/layout/fragment_marketplace.xml
@@ -10,28 +10,35 @@
     android:id="@+id/marketplace_header"
     layout="@layout/marketplace_header"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="56dp"
     />
 
+
+
     <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingRight="2dp"
-    android:paddingLeft="2dp"
-    android:orientation="vertical"
-    android:gravity="center_horizontal"
-    android:background="@color/darkgrey"
-    android:layout_below="@+id/marketplace_header"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        android:layout_below="@+id/marketplace_header"
+        android:background="@color/white"
     >
 
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/activity_main_swipe_refresh_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
 
 
-    <android.support.v7.widget.RecyclerView
-    android:id="@+id/recylcer_view"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:scrollbars="vertical" />
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recylcer_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            />
+
+        </android.support.v4.widget.SwipeRefreshLayout>
 
 
 <!--
@@ -46,6 +53,7 @@
 
 
 
+
     <com.melnykov.fab.FloatingActionButton
     android:id="@+id/fab"
     android:layout_width="wrap_content"
@@ -55,8 +63,8 @@
     android:layout_marginRight="16dp"
     android:layout_marginBottom="16dp"
     android:src="@drawable/fab_plus_icon"
-    fab:fab_colorNormal="@color/color_primary"
-    fab:fab_colorPressed="@color/color_primary_dark"
+    fab:fab_colorNormal="@color/ColorPrimary"
+    fab:fab_colorPressed="@color/ColorPrimaryDark"
 
     />
 
