--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -1,16 +1,34 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:id="@+id/googleDrawer"
     android:background="@color/white">
 
-    <RelativeLayout android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="168dp"
         android:background="@color/darkgrey"
         android:id="@+id/navigationHeader"
         android:paddingTop="24dp">
 
-        <ImageView android:layout_width="64dp"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:id="@+id/imgAvatar"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp"
+            app:border_width="3dp"
+            app:border_color="#FFFFFF"/>
+
+
+        <!--
+        <ImageView
+            android:layout_width="64dp"
             android:layout_height="64dp"
             android:id="@+id/imgAvatar"
             android:layout_alignParentTop="true"
@@ -19,6 +37,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="8dp" />
+            -->
 
         <LinearLayout android:orientation="vertical"
             android:layout_width="fill_parent"
