--- a/app/src/main/res/layout/navigation_drawer_row.xml
+++ b/app/src/main/res/layout/navigation_drawer_row.xml
@@ -12,5 +12,7 @@
         android:layout_marginEnd="16dp"
         android:textSize="14sp"
         android:gravity="center_vertical"
-        android:textColor="@color/myTextPrimaryColor" />
+        android:textColor="@color/myTextPrimaryColor"
+        android:textStyle="bold"
+        />
 </LinearLayout>
